Bug 505681 - Bad contrast of menu bar items on hover with some Windows 10 High Contrast color schemes
Summary: Bad contrast of menu bar items on hover with some Windows 10 High Contrast co...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 6.1.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-17 07:34 UTC by Ingo Klöcker
Modified: 2025-11-12 13:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Menu bar items on hover with Windows 10 Contrast Black (2.39 KB, image/png)
2025-06-17 07:34 UTC, Ingo Klöcker
Details
Menu bar items on hover with Windows 10 Contrast White (2.28 KB, image/png)
2025-06-17 07:35 UTC, Ingo Klöcker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ingo Klöcker 2025-06-17 07:34:31 UTC
Created attachment 182317 [details]
Menu bar items on hover with Windows 10 Contrast Black

On Windows 10, menu bar items look like this on hover:



STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ingo Klöcker 2025-06-17 07:35:51 UTC
Created attachment 182318 [details]
Menu bar items on hover with Windows 10 Contrast White
Comment 2 Ingo Klöcker 2025-06-17 07:40:24 UTC
Sorry, I've accidentally submitted too early (due to bad UX when adding attachments).

The problem is that on hover Breeze uses the WindowText role for the text and the Highlight role for the background for menu bar items. In case of the high-contrast color schemes Contrast Black and Contrast White of Windows 10 this gives bad contrast because those color schemes use inverted text color for selection.
Comment 3 Bug Janitor Service 2025-06-17 07:50:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/547
Comment 4 Ingo Klöcker 2025-11-12 13:10:23 UTC
Git commit 201bafed8d212ec4277a3fa8cd2279469f98f88a by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 12/11/2025 at 07:34.
Pushed by kloecker into branch 'master'.

kstyle: Draw hovered menu bar items like selected items

This avoids problems with some high-contrast color schemes where hovered
menu bar items had really bad contrast.

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/201bafed8d212ec4277a3fa8cd2279469f98f88a