kstyle: Draw hovered menu bar items like selected items

This avoids problems with some high-contrast color schemes where hovered
menu bar items had really bad contrast.

BUG: 505681